--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -7,6 +7,7 @@
     --default-white: rgb(245, 245, 245);
     --default-grey: rgb(128, 128, 128);
     --transparent-white: rgba(245, 245, 245, 0.6);
+    --transparent-darkgrey: rgba(114, 114, 114, 0.4);
     --transparent-grey: rgba(168, 168, 168, 0.4);
     --transparent-lightgrey: rgba(200, 200, 200, 0.4);
 
@@ -882,7 +883,7 @@ a {
     align-items: center;
 
     transform: translateX(100%);
-    transition: all 200ms ease-in-out;
+    transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 .notification.show {
     transform: translateX(0);
@@ -942,4 +943,143 @@ a {
 }
 .notification.critical .countDownBar {
     background: var(--notify-critical);
+}
+
+/* 弹窗区域 */
+#popupArea {
+    position: fixed;
+    width: 100%;
+    height: calc(100% - 2rem);
+    top: 2rem;
+    left: 0;
+
+    background: var(--transparent-darkgrey);
+    backdrop-filter: blur(3px);
+
+    align-items: center;
+    justify-content: center;
+
+    z-index: 200;
+
+    transition: all 200ms ease-in-out;
+
+    opacity: 0;
+    display: none;
+}
+#popupArea.show {
+    display: flex;
+    opacity: 1;
+}
+
+.popup {
+    position: relative;
+    min-width: 50%;
+    min-height: 50%;
+
+    max-width: 80%;
+    max-height: 80%;
+
+    background: var(--default-white);
+    border: none;
+    border-radius: 12px;
+    box-shadow: 0 0 10px var(--transparent-grey);
+
+    padding: 1rem 2rem;;
+
+    align-items: center;
+    justify-content: space-between;
+
+    transform: scale(0.0);
+    transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.popup.show {
+    transform: scale(1.0);
+}
+
+.popupTitle {
+    width: 100%;
+    height: 3rem;
+
+    align-items: center;
+}
+.popupIcon {
+    width: 3rem;
+    height: 3rem;
+
+    margin-right: 6px;
+}
+.popupIcon > img {
+    width: 3rem;
+    height: 3rem;
+}
+.popupLabel {
+    flex: 1 0;
+}
+.popupClose {
+    appearance: none;
+    position: relative;
+    width: 2.5rem;
+    height: 2.5rem;
+
+    background: transparent;
+    border: none;
+    border-radius: 6px;
+
+    transition: all 200ms ease-in-out;
+}
+.popupClose:hover {
+    background: var(--transparent-grey);
+}
+
+.popupContent {
+    width: 100%;
+    height: calc(100% - 6rem);
+}
+
+.popupOptions {
+    position: relative;
+    width: 100%;
+    height: 3rem;
+
+    align-items: center;
+    justify-content: center;
+}
+
+.popupButton {
+    appearance: none;
+    position: relative;
+    width: 7rem;
+    height: 3rem;
+
+    background: var(--default-white);
+    border-style: solid;
+    border-color: var(--color-blue-default);
+    border-width: 3px;
+    border-radius: 6px;
+
+    margin: 0 1rem;
+
+    transition: all 200ms ease-in-out;
+}
+.popupButton:hover {
+    background: var(--color-blue-light);
+}
+/* 按钮高亮 */
+.popupButton.red {
+    border-color: var(--color-red-default);
+}
+.popupButton.red:hover {
+    background: var(--color-red-light);
+}
+.popupButton.green {
+    border-color: var(--color-green-default);
+}
+.popupButton.green:hover {
+    background: var(--color-green-light);
+}
+.popupButton.yellow {
+    border-color: var(--color-yellow-default);
+}
+.popupButton.yellow:hover {
+    background: var(--color-yellow-light);
 }
