--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -194,12 +194,14 @@ a {
 .windowControl {
     position: relative;
     width: 3rem;
-    height: 100%;
+    height: calc(100% - 4px);
 
     background: transparent;
     border: none;
+    border-radius: 6px;
 
-    margin: auto 0;
+    margin-top: 2px;
+    margin-right: 2px;
 
     transition: all 200ms ease-in-out;
 }
