--- a/src/components/settings/settingsStyle.css
+++ b/src/components/settings/settingsStyle.css
@@ -510,5 +510,57 @@
 
 #settingsBlock {
     width: 100%;
+    height: 8rem;
+}
+
+/* 设置更改丢弃 / 保存 */
+#changesControl {
+    position: fixed;
+    width: calc(100% - 6rem);
     height: 4rem;
+    bottom: 5rem;
+
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.changesOption {
+    appearance: none;
+
+    width: 8rem;
+    height: 3rem;
+
+    background: var(--default-lightgrey);
+    border: none;
+    border-radius: 8px;
+    color: var(--default-black);
+
+    margin: 0 6px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    transform: scale(1);
+
+    transition: all 200ms ease-in-out;
+}
+.changesOption:hover {
+    background: var(--color-blue-light);
+    color: var(--color-blue-deep);
+
+    transform: scale(1.1);
+}
+.changesOption > img {
+    width: 3rem;
+    height: 3rem;
+}
+.changesOption > label {
+    color: var(--default-black);
+
+    transition: all 200ms ease-in-out;
+}
+.changesOption:hover > label {
+    color: var(--color-blue-deep);
 }
