--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -243,9 +243,11 @@ a {
 #windowTop {
     position: relative;
     width: 100%;
-    height: 3rem;
+    height: 4rem;
 
     padding: 0 5rem;
+
+    align-items: center;
 }
 
 /* 前进 / 后退按钮 */
@@ -1049,7 +1051,7 @@ a {
     position: fixed;
     width: 18rem;
     height: auto;
-    top: 4rem;
+    top: 5rem;
     left: calc(100% - 18rem);
 
     background: transparent;
