feat(Search page): :sparkles: Complete request features of the settings page
Finish search request features of the search page

--- a/src/components/search/searchStyle.css
+++ b/src/components/search/searchStyle.css
@@ -82,3 +82,11 @@
 [id^="searchType_"] > .tabSwitcher {
     justify-content: center;
 }
+
+.musicBox {
+    width: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
